[gd_scene load_steps=6 format=2]

[ext_resource path="res://sprites/pizza_spr_0.png" type="Texture" id=1]
[ext_resource path="res://scenes/ItemI.gd" type="Script" id=2]
[ext_resource path="res://scenes/Area2D.gd" type="Script" id=4]
[ext_resource path="res://scenes/ItemSlot.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 15, 31 )

[node name="ItemE" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, 16 )
texture = ExtResource( 1 )

[node name="ItemSlot" parent="." instance=ExtResource( 5 )]

[node name="ItemSlot2" parent="." instance=ExtResource( 5 )]
position = Vector2( 0, 32 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 0, 48 )
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -32 )
shape = SubResource( 1 )

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
